--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ os:
     - linux
     - osx
 
-osx_image: xcode7.2b3
+osx_image: xcode7.2b2
 
 env:
     matrix:
@@ -45,10 +45,8 @@ before_install:
         OSNAME="Linux";
         sudo add-apt-repository ppa:kalakris/cmake -y;
         sudo add-apt-repository ppa:ubuntu-toolchain-r/test -y;
-        sudo add-apt-repository --yes ppa:boost-latest/ppa;
         sudo apt-get update -qq;
         sudo apt-get install -qq cmake;
-        sudo apt-get install -qq libboost-system1.55-dev libboost-thread1.55-dev libboost-python1.55-dev;
         export CXX="clang++-3.6";
         export CC="clang-3.6";
       fi
@@ -66,6 +64,7 @@ before_install:
     - DEPS="numpy matplotlib sphinx"
     - conda create -q -n gimli python=$PYVERSION $DEPS
     - source activate gimli
+    - conda install -c https://conda.anaconda.org/gimli boost
     - pip install -r doc/requirements.txt # documentation requirements
 
 install:
