--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -104,21 +104,17 @@ if (PYVERSION)
 endif()
 find_package(PythonInterp) # find version belongs to the active python command
 
-if (NOT Boost_INCLUDE_DIR)
-    if (BOOST_ROOT)
-        get_filename_component(BOOST_ROOT "${BOOST_ROOT}" ABSOLUTE)
-        set(Boost_INCLUDE_DIR ${BOOST_ROOT}/include)
-    else()
-        if (NOT WIN32)
-            find_package(Boost 1.46.0 COMPONENTS system thread)
-        endif()
-        # we should think about cmake superbuild with ExternalProject_Add as the replacement for find_or_build_package (next generation)
-        if (NOT Boost_INCLUDE_DIR)
-            FILE(READ "${EXTERNAL_DIR}/.boost-py${PYTHON_VERSION_MAJOR}.dist" BOOST_DIST_NAME)
-            STRING(REGEX REPLACE "\n" "" BOOST_DIST_NAME "${BOOST_DIST_NAME}")
+function(find_boost_from_distname_file)
+    set (BOOST_DIST_NAME_FILE "${EXTERNAL_DIR}/.boost-py${PYTHON_VERSION_MAJOR}.dist")
             
-            get_filename_component(BOOST_ROOT "${EXTERNAL_DIR}/${BOOST_DIST_NAME}" ABSOLUTE)
-            IF (EXISTS "${BOOST_ROOT}/")
+            IF (EXISTS ${BOOST_DIST_NAME_FILE})
+                message(STATUS "reading ${BOOST_DIST_NAME_FILE}")
+                FILE(READ "${EXTERNAL_DIR}/.boost-py${PYTHON_VERSION_MAJOR}.dist" BOOST_DIST_NAME)
+                STRING(REGEX REPLACE "\n" "" BOOST_DIST_NAME "${BOOST_DIST_NAME}")
+                get_filename_component(BOOST_ROOT "${EXTERNAL_DIR}/${BOOST_DIST_NAME}" ABSOLUTE)
+            endif()
+
+            IF (EXISTS ${BOOST_ROOT})
                 message(STATUS "BOOST_ROOT from ${EXTERNAL_DIR}/.boost-py${PYTHON_VERSION_MAJOR}.dist: ${BOOST_ROOT}")
 
                 set(BOOST_ROOT ${BOOST_ROOT}  CACHE FILEPATH "Boost root distribution")
@@ -129,8 +125,24 @@ if (NOT Boost_INCLUDE_DIR)
             else()
                 message(STATUS "BOOST_ROOT does not exist: ${BOOST_ROOT}")	
             ENDIF()
+endfunction(find_boost_from_distname_file)
+
+if (NOT Boost_INCLUDE_DIR)
+    if (BOOST_ROOT)
+        get_filename_component(BOOST_ROOT "${BOOST_ROOT}" ABSOLUTE)
+        set(Boost_INCLUDE_DIR ${BOOST_ROOT}/include)
+    else()
+        if (NOT WIN32)
+            find_package(Boost 1.46.0 COMPONENTS system thread)
+        endif()
+        # we should think about cmake superbuild with ExternalProject_Add as the replacement for find_or_build_package (next generation)
+        if (NOT Boost_INCLUDE_DIR)
+            find_boost_from_distname_file()
+           
         endif()
         find_or_build_package_check(Boost boost Boost_INCLUDE_DIR False)
+        find_boost_from_distname_file()
+        
         #exit()
     endif(BOOST_ROOT)
     message(STATUS "BOOST_ROOT, ${BOOST_ROOT}")
