--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,14 @@ os:
 python:
     - "3.4"
 
+branches:
+  only:
+    - dev
+
 osx_image: xcode7.2b2
+
+virtualenv:
+  system_site_packages: true
 
 addons:
   apt:
@@ -48,10 +55,10 @@ before_install:
 
     # pre-install boost
     - sudo add-apt-repository --yes ppa:boost-latest/ppa
-    - sudo apt-get install libboost-all-dev
+    - sudo apt-get install libboost1.55-all-dev
 
 install:
-    - curl -sL http://install.pygimli.org | bash -s py=3
+    - curl -sL http://install.pygimli.org | bash -s py=3 j=4
 
 #notifications:
 #email:
