--- a/.travis.yml
+++ b/.travis.yml
@@ -2,8 +2,13 @@
 # See build results on http://travis-ci.org/gimli-org/gimli
 # Before commiting changes to this file, check consistency on http://lint.travis-ci.org/
 
-language: cpp
+# Most explicit routing to GCE Precise
 sudo: required
+dist: precise
+group: edge
+
+language: cpp
+
 compiler: clang
 os:
     - linux
@@ -17,9 +22,6 @@ osx_image: xcode7.2b2
 
 addons:
   apt:
-    sources:
-    - ubuntu-toolchain-r-test
-    - llvm-toolchain-precise-3.6
     packages:
     - build-essential
     - clang-3.6
@@ -32,6 +34,9 @@ addons:
     - libedit-dev
     - coreutils
     - python3-dev
+    - python3-numpy
+    - cmake
+    - liboost-all-dev
 
 before_install:
     # hack automatic OS detection
@@ -42,24 +47,6 @@ before_install:
     - echo 'PRETTY_NAME="Ubuntu 14.04.2 LTS"' | sudo tee -a /etc/os-release
     - echo 'VERSION_ID="14.04"' | sudo tee -a /etc/os-release
     - echo 'HOME_URL="http://www.ubuntu.com/"' | sudo tee -a /etc/os-release
-
-    # Some custom sources
-    - sudo add-apt-repository ppa:ubuntu-toolchain-r/test -y
-    - sudo add-apt-repository --yes ppa:kalakris/cmake
-    - sudo add-apt-repository --yes ppa:boost-latest/ppa
-    - sudo apt-get update -qq
-
-      # newer gcc
-    - sudo apt-get install g++-4.8
-    - sudo update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-4.8 90
-    - sudo update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-4.8 90
-
-    # update cmake
-    - sudo apt-get install -qq cmake
-
-    # pre-install boost
-    - sudo apt-get install -qq libboost-system1.55-dev libboost-thread1.55-dev libboost-python1.55-dev
-    - sudo apt-get install -qq python3-numpy python3-matplotlib
 
 install:
     - curl -sL http://install.pygimli.org | bash -s py=3 j=4
