--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -12,6 +12,11 @@ notifications:
   on_build_success: false
   on_build_failure: true
   on_build_status_changed: true
+
+environment:
+  BOOST_ROOT: C:\Libraries\boost
+  BOOST_LIBRARYDIR: C:\Libraries\boost\stage\lib
+
 build_script:
     - set PATH=C:\msys64\usr\bin;%PATH%
     - C:\msys64\usr\bin\bash -lc "curl -sL http://install.pygimli.org | bash"
